# svelte-tauri

./: .gitignore  README.md  package-lock.json  package.json  rollup.config.js
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: build.rs  main.rs
