[package]
name = "svelte-tauri"
version = "0.1.0"
description = "Svelte Template Tauri"
authors = [ "Klassy Kat" ]
license = ""
repository = ""
default-run = "tauri-test"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "^1.0.0-beta.2", features = ["api-all"] }

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[[bin]]
name = "tauri-test"
path = "src/main.rs"
